src/test/deca/syntax/valid/read_calls.deca

// Description :
// Appels readInt() et readFloat()
//
// Resultats :
// ok
//

{
    x = readInt();

    y = readFloat();

    println(x, y);
}