src/test/deca/syntax/invalid/print_comma.deca

// Description :
// Virgule finale dans print
//
// Resultats :
// Erreur syntaxique
// mismatched input ')'
// Regle : list_expr : expr (',' expr)*

{
    print(1,);
}